@@ -505,3 +505,4 @@ Magic carpet.
 Lobotomised state.
 Geysirs.
 Damaged bodyparts should work less well. (ie. when arms are damaged armstrength should go down)
+Wand of Polymorph to X (where X is a monster)
