@@ -6,6 +6,11 @@ This file contains SPOILERS, which might ruin your IVAN experience totally. The 
 is also provided AS IS and is probably completely unreadable.
 
 ------------------------------------------------------------------------------------
+August 5 2004 Heikki Sairanen <firstname.lastname@tut.fi>
+
+	* Food added to UT
+	* wskill with no exp that are used are shown on wskill screen
+
 July 14 2004 Heikki Sairanen <firstname.lastname@tut.fi>
 
 	* Vladimir works
